--- a/BLAZAM/App.razor
+++ b/BLAZAM/App.razor
@@ -44,9 +44,9 @@
                     <FocusOnNavigate RouteData="@routeData" Selector="h1" />
                 </Found>
                 <NotFound>
-                    <PageTitle>Not found</PageTitle>
+                    <AppPageTitle>Not found</AppPageTitle>
                     <LayoutView Layout="@typeof(MainLayout)">
-                        <BLAZAM.Server.Pages.Error._404 />
+                        <_404 />
                     </LayoutView>
                 </NotFound>
             </Router>
