--- a/BLAZAM/Shared/Layouts/MainLayout.razor
+++ b/BLAZAM/Shared/Layouts/MainLayout.razor
@@ -60,7 +60,7 @@
                     }
 
 
-                    <MudContainer Style="@topMarginForContent" MaxWidth="MaxWidth.Medium" Class="pt-5">
+                    <MudContainer Style="@topMarginForContent" MaxWidth="MaxWidth.Large" Class="pt-5">
     
 
                         @Body
