--- a/BLAZAM/Shared/UI/AppModalContent.razor
+++ b/BLAZAM/Shared/UI/AppModalContent.razor
@@ -13,5 +13,9 @@
         InvokeAsync(StateHasChanged);
 
     }
-
+    protected override void OnInitialized()
+    {
+        base.OnInitialized();
+        
+    }
 }
