--- a/BLAZAM/Shared/UI/FlexContainer.razor
+++ b/BLAZAM/Shared/UI/FlexContainer.razor
@@ -1,4 +1,4 @@
-﻿<MudElement Class=@("d-flex" + Wrap??"flex-wrap" + "gap-"+Spacing)>
+﻿<MudElement Class=@("d-flex " + (Wrap==true?"flex-wrap ":"") + "gap-"+Spacing +" "+Class)>
     @ChildContent
 </MudElement>
 
@@ -9,6 +9,9 @@
     [Parameter]
     public bool Wrap { get; set; } = true;
 
+
+    [Parameter]
+    public string Class{ get; set; }
 
     [Parameter]
     public int Spacing { get; set; } = 4;
