--- a/BLAZAM/Pages/Configure/Audit.razor
+++ b/BLAZAM/Pages/Configure/Audit.razor
@@ -25,7 +25,7 @@
                          SortMode="@SortMode.Multiple"
                          Groupable="false">
                 <Columns>
-                    <PropertyColumn Property="x => x.Timestamp" />
+                    <PropertyColumn Property="x => x.Timestamp.ToLocalTime()" />
                     <PropertyColumn Property="x => x.Username" />
                     <PropertyColumn Property="x => x.IpAddress" />
                     <PropertyColumn Property="x => x.Action" />
@@ -49,7 +49,7 @@
 
                 <MudChart ChartType="ChartType.Line"
                       ChartSeries="@LoginSeries"
-                      XAxisLabels="@auditEntries.Where(ae=>ae.Action=="Login" || ae.Action=="Logout").DistinctBy(ae=>ae.Timestamp.Date).Select(ae=>ae.Timestamp.Date.ToString()).ToArray()"
+                      XAxisLabels="@auditEntries.Where(ae=>ae.Action=="Login" || ae.Action=="Logout").DistinctBy(ae=>ae.Timestamp.ToLocalTime().Date).Select(ae=>ae.Timestamp.ToLocalTime().ToString("M/d/yyyy")).ToArray()"
                       Width="100%"
                       Height="350px"
                       ChartOptions="@LoginChartOptions"></MudChart>
@@ -57,7 +57,7 @@
                 <MudFab Icon="@Icons.Material.Filled.ShowChart" OnClick="ToggleLineMode" />
                 <MudDataGrid Virtualize ColumnResizeMode="ResizeMode.Container" Hideable Items="@auditEntries.Where(ae=>ae.Action=="Login" || ae.Action=="Logout").OrderByDescending(ae=>ae.Timestamp)" Filterable="false" SortMode="@SortMode.Multiple" Groupable="false">
                 <Columns>
-                    <PropertyColumn Property="x => x.Timestamp" />
+                    <PropertyColumn Property="x => x.Timestamp.ToLocalTime()" />
                     <PropertyColumn Property="x => x.Username" />
                     <PropertyColumn Property="x => x.IpAddress" />
                     <PropertyColumn Property="x => x.Action" />
@@ -77,7 +77,7 @@
             <ChildContent>
                 <MudDataGrid Virtualize ColumnResizeMode="ResizeMode.Container" Hideable Items="@systemAuditEntries.OrderByDescending(ae=>ae.Timestamp)" Filterable="false" SortMode="@SortMode.Multiple" Groupable="false">
                 <Columns>
-                    <PropertyColumn Property="x => x.Timestamp" />
+                    <PropertyColumn Property="x => x.Timestamp.ToLocalTime()" />
                     <PropertyColumn Property="x => x.Username" />
                     <PropertyColumn Property="x => x.IpAddress" />
                     <PropertyColumn Property="x => x.Action" />
