--- a/BLAZAM/Shared/Layouts/MainAppBar.razor
+++ b/BLAZAM/Shared/Layouts/MainAppBar.razor
@@ -6,18 +6,22 @@
 
 
 <MudAppBar Color=Color.Primary Elevation="1">
-    @if (!mainLayout.DrawerOpen)
+    @if (mainLayout?.DrawerOpen != true)
     {
-        <MudImage Class="app-icon" Src="@StaticAssets.ApplicationIconUri" />
-
+        <MudLink Href="@Nav.Uri">
+            <MudImage Class="app-icon" Src="@StaticAssets.ApplicationIconUri" />
+        </MudLink>
     }
+    @if (mainLayout != null)
+    {
 
-    <MudIconButton Icon="@Icons.Material.Filled.Menu"
+        <MudIconButton Icon="@Icons.Material.Filled.Menu"
                    Color="Color.Inherit"
                    Edge="Edge.Start"
                    OnClick="@((e) => {mainLayout.DrawerOpen=!mainLayout.DrawerOpen; })" />
+    }
 
-    @if (mainLayout.setHeader != null)
+    @if (mainLayout?.setHeader != null)
     {
         @mainLayout.setHeader.ChildContent
 
@@ -45,9 +49,9 @@
             {
 
                 <MudAlert OnClick=@(()=>{
-                    if(notification.Link!=null)
-                        Nav.NavigateTo(notification.Link.ToString());
-                }) ShowCloseIcon=notification.Dismissable>
+                  if(notification.Link!=null)
+                  Nav.NavigateTo(notification.Link.ToString());
+                  }) ShowCloseIcon=notification.Dismissable>
                     @if (!notification.Title.IsNullOrEmpty())
                     {
                         <MudText Typo="Typo.h6">@notification.Title</MudText>
@@ -73,7 +77,7 @@
             }
             else
             {
-                <MudAvatar Elevation="4" Style="@avatarBgColor">@UserStateService.CurrentUsername.FirstOrDefault()</MudAvatar>
+                <MudAvatar Elevation="4" Style="@avatarBgColor">@UserStateService.CurrentUsername?.FirstOrDefault()</MudAvatar>
 
             }
 
@@ -133,5 +137,5 @@
         hexColor += Convert.ToHexString(usernameHashBytes.Take(3).ToArray());
         return hexColor;
     }
-  
+
 }
