--- a/BLAZAM/Shared/UI/Settings/Permissions/OUPrivilegeEditor.razor
+++ b/BLAZAM/Shared/UI/Settings/Permissions/OUPrivilegeEditor.razor
@@ -11,7 +11,7 @@
             @foreach (var map in inheritedMappings)
             {
                 <MudCard>
-                    <PermissionMapEditor Map="map" ReadOnly=true />
+                    <PermissionMapEditor  MappingsChanged=@MappingsChanged Map="map" ReadOnly=true />
                 </MudCard>
             }
         </MudExpansionPanel>
@@ -19,18 +19,18 @@
     }
     @foreach (var map in appliedMappings)
     {
-        <PermissionMapEditor MappingDeleted="@(()=>{RefreshData();})" Map="map" />
+        <PermissionMapEditor MappingsChanged="@(()=>{RefreshData();})" Map="map" />
     }
     @if (NewMapping != null)
     {
-        <PermissionMapEditor MappingDeleted="@(()=>{RefreshData();})" Map="NewMapping" />
+        <PermissionMapEditor MappingsChanged="@(()=>{RefreshData();})" Map="NewMapping" />
     }
     <MudButton OnClick="AddNewMapping" Color="Color.Success">Add new mapping</MudButton>
 </MudCard>
 
 
 @code {
-#nullable disable warnings
+    #nullable disable warnings
     bool collapseVisible = false;
 
     IADOrganizationalUnit _ou;
@@ -45,6 +45,9 @@
 
         }
     }
+
+    [Parameter]
+    public EventCallback MappingsChanged{ get; set; }
 
     private PermissionMapping? NewMapping;
     List<PermissionMapping> appliedMappings { get; set; } = new List<PermissionMapping>();
