--- a/BLAZAM/Shared/UI/Settings/Permissions/PermissionMapEditor.razor
+++ b/BLAZAM/Shared/UI/Settings/Permissions/PermissionMapEditor.razor
@@ -9,7 +9,8 @@
         @if (!ReadOnly)
         {
 
-            <MudSelectList Values=@PermissionDelegates
+            <MudSelectList Validation="@(PermissionDelegates.Count>0)"
+                Values=@PermissionDelegates
                    Placeholder=@SettingsLocalization["Choose or Search..."]
                    T="PermissionDelegate"
                    ToStringFunc="item=>Directory.Groups.FindGroupBySID(item?.DelegateSid)?.GroupName"
@@ -33,7 +34,8 @@
         @if (!ReadOnly)
         {
 
-            <MudSelectList Values=@accessLevels
+            <MudSelectList Validation="@(PermissionDelegates.Count>0)"
+                Values=@accessLevels
                    Placeholder=@SettingsLocalization["Choose or Search..."]
                    T="AccessLevel"
                    ToStringFunc="item=>item?.Name"
@@ -68,7 +70,7 @@
 
 }
 @code {
-#nullable disable warnings
+    #nullable disable warnings
     PermissionMapping? _map;
     [Parameter]
     public PermissionMapping? Map
@@ -85,7 +87,7 @@
         }
     }
     [Parameter]
-    public EventCallback MappingDeleted { get; set; }
+    public EventCallback MappingsChanged { get; set; }
     [Parameter]
     public bool ReadOnly { get; set; } = false;
 
@@ -169,7 +171,7 @@
         }
         await InvokeAsync(StateHasChanged);
         SnackBarService.Success("Mapping deleted");
-        await MappingDeleted.InvokeAsync();
+        await MappingsChanged.InvokeAsync();
 
     }
     new async Task Save()
@@ -179,7 +181,7 @@
         var result = Context.SaveChanges();
         await InvokeAsync(StateHasChanged);
         SnackBarService.Success("Mapping saved");
-
+        await MappingsChanged.InvokeAsync();
     }
     void ValidateCheck()
     {
