--- a/BLAZAM/Shared/UI/Settings/Permissions/PriviligeLevelListItem.razor
+++ b/BLAZAM/Shared/UI/Settings/Permissions/PriviligeLevelListItem.razor
@@ -1,5 +1,5 @@
 ﻿@inherits ValidatedForm
-<MudExpansionPanel Text="">
+<MudExpansionPanel Dense Text="">
     <TitleContent>
         <MudStack Row=true>
             <MudText Typo="Typo.h6">
@@ -34,7 +34,7 @@
 
 
             <MudButton VerticalAlignment="VerticalAlignment.Middle" @onclick="Save" Color="Color.Success">Save Changes</MudButton>
-            <AppCloseButton VerticalAlignment="VerticalAlignment.Middle" @onclick="DeletePermissionGroup" Color="Color.Success" />
+            <AppCloseButton VerticalAlignment="VerticalAlignment.Middle" @onclick="DeleteDelegate" Color="Color.Success" />
         </MudStack>
 
 
@@ -44,13 +44,15 @@
 
 @code {
 
-#nullable disable warnings
+    #nullable disable warnings
     IDirectoryEntryAdapter? Group;
     [Parameter]
     public PermissionDelegate Level { get; set; }
     [Parameter]
     public new IDatabaseContext Context { get; set; }
 
+    [Parameter]
+    public EventCallback DelegateDeleted{ get; set; }
 
     protected override async Task OnInitializedAsync()
     {
@@ -60,12 +62,12 @@
 
     bool collapse1Visible = false;
 
-    async Task DeletePermissionGroup()
+    async Task DeleteDelegate()
     {
         Level.DeletedAt = DateTime.UtcNow;
         await Context.SaveChangesAsync();
-        SnackBarService.Info("Permission Delegate removed.");
-
+        SnackBarService.Success("Permission Delegate removed.");
+        DelegateDeleted.InvokeAsync();
     }
     private async void Save()
     {
