--- a/BLAZAM/Pages/Search.razor
+++ b/BLAZAM/Pages/Search.razor
@@ -12,7 +12,7 @@
     @if (Program.InDemoMode)
     {
         <MudAlert>
-          Try searching Moore, Howard, Evans, Manny...
+            Try searching Moore, Howard, Evans, Manny...
         </MudAlert>
     }
 
@@ -35,7 +35,7 @@
                 {
 
 
-                    <div Class="cursor-pointer" @onclick=@(()=>{SubmitSearch(u.CanonicalName);}) >
+                    <div Class="cursor-pointer" @onclick=@(()=>{SubmitSearch(u.CanonicalName);})>
                         <MudText Typo="Typo.h1">@u.ObjectType</MudText>
                         <MudText Typo="Typo.h1">@u.CanonicalName</MudText>
                         <small>@u.SamAccountName</small>
@@ -45,8 +45,8 @@
                 }
             </ItemContent>
             <Placeholder>
-                <div >
-                    <MudText Typo="Typo.h1" >Loading...</MudText>
+                <div>
+                    <MudText Typo="Typo.h1">Loading...</MudText>
                     <small>Loading...</small>
                 </div>
 
@@ -59,36 +59,42 @@
         if (result.CanRead)
         {
 
-                @switch (result.ObjectType)
-                {
-                    case ActiveDirectoryObjectType.User:
-                        <ViewUser @bind-SavingChanges="SavingChanges" User="(IADUser)result" />
-                        break;
-                    case ActiveDirectoryObjectType.Group:
-                        <ViewGroup @bind-SavingChanges="SavingChanges" Group="(IADGroup)result" />
-                        break;
-                    case ActiveDirectoryObjectType.Computer:
-                        <ViewComputer @bind-SavingChanges="SavingChanges" Computer="(IADComputer)result" />
-                        break;
-                    case ActiveDirectoryObjectType.OU:
-                        <ViewOU @bind-SavingChanges="SavingChanges" OU="(IADOrganizationalUnit)result" />
-                        break;
-                }
+            @switch (result.ObjectType)
+            {
+                case ActiveDirectoryObjectType.User:
+                    <ViewUser @bind-SavingChanges="SavingChanges" User="(IADUser)result" />
+                    break;
+                case ActiveDirectoryObjectType.Group:
+                    <ViewGroup @bind-SavingChanges="SavingChanges" Group="(IADGroup)result" />
+                    break;
+                case ActiveDirectoryObjectType.Computer:
+                    <ViewComputer @bind-SavingChanges="SavingChanges" Computer="(IADComputer)result" />
+                    break;
+                case ActiveDirectoryObjectType.OU:
+                    <ViewOU @bind-SavingChanges="SavingChanges" OU="(IADOrganizationalUnit)result" />
+                    break;
+            }
         }
         else
         {
-            <SearchIcon Name="@SearchIcon" Text="@ModelsTypeName" />
+            <SearchIcon Icon="@SearchIcon" Text="@ModelsTypeName" />
 
         }
 
     }
+    else if (Searcher.Results.Count == 0)
+    {
+        <MudAlert Class="mud-alert-filled-info">
+            No results were found.
+        </MudAlert>
+    }
     else if (LoadingData)
     {
-            <SearchIcon Name="@SearchIcon" Text="@ModelsTypeName" />
+        <SearchIcon Icon="@SearchIcon" Text="@ModelsTypeName" />
     }
     else
     {
-        <SearchIcon Name="@SearchIcon" Text="@ModelsTypeName" />
+        <SearchIcon Icon="@SearchIcon" Text="@ModelsTypeName" />
 
     }
 </AuthorizeView>
@@ -99,7 +105,7 @@
 
     bool SavingChanges = false;
     string ModelsTypeName = "Search";
-    protected string SearchIcon { get; set; } = "fa-solid fa-building";
+    protected string SearchIcon { get; set; } = "";
     string? _searchTermParameter;
     /// <summary>
     /// The search term that comes from the URI
@@ -113,7 +119,7 @@
             LoadingData = true;
             Searcher?.Results.Clear();
             _searchTermParameter = value;
-            SearchService.SearchTerm = value;
+            //SearchService.SearchTerm = value;
             PerformSearch();
             //Searcher.GeneralSearchTerm = value;
             if (_searchTermParameter.IsNullOrEmpty())
@@ -143,7 +149,7 @@
     /// <returns></returns>
     protected override async Task OnInitializedAsync()
     {
-
+        await base.OnInitializedAsync();
         Searcher = new ADSearch();
         SearchService.SearchTerm = SearchTermParameter;
         Searcher.GeneralSearchTerm = SearchTermParameter;
@@ -199,16 +205,10 @@
 
         LoadingData = true;
         await InvokeAsync(StateHasChanged);
-        if (!SearchTermParameter.IsNullOrEmpty() && SearchTermParameter.Length > 2)
-        {
+        if (!SearchTermParameter.IsNullOrEmpty() && SearchTermParameter.Length > 0)
             await InvokeSearch();
-
-        }
         else
-        {
             Searcher.Results.Clear();
-        }
-
         LoadingData = false;
 
         await InvokeAsync(StateHasChanged);
@@ -226,13 +226,15 @@
         else
             Searcher.CancelSeaches();
         SearchService.SearchTerm = SearchTermParameter;
-        Searcher.GeneralSearchTerm = SearchTermParameter;
         Searcher.EnabledOnly = !SearchService.IncludeDisabled;
         Searcher.GeneralSearchTerm = SearchService.SearchTerm;
         Searcher.ObjectTypeFilter = SearchService.SeachObjectType;
         Searcher.ExactMatch = true;
 
         await Searcher.SearchAsync<DirectoryEntryAdapter, IDirectoryEntryAdapter>();
+
+        await Searcher.SearchAsync<DirectoryEntryAdapter, IDirectoryEntryAdapter>();
+        //search.Wait();
         if (Searcher.Results.Count < 1)
         {
             Searcher.ExactMatch = false;
